added module support

--- a/pythomat.ini
+++ b/pythomat.ini
@@ -28,7 +28,8 @@ saveto = C:\\Users\\Beispiel\\Studium\\ICL
 mode = single
 
 [Prog2Videos]
-mode = prog2
+mode = module
+name = prog2
 saveto = .
 user = ...
 pass = ...
